syntax = "proto3";

message Login {
  string id = 1;
  uint64 createdAt = 2;
  uint64 updatedAt = 3;
  string platform = 4;
  string platformLoginId = 5;
  string platformLoginSecret = 6;
  string userId = 7;
  bool isNew = 8;
  Credentials credentials = 9;
}

message Credentials {
  oneof credentials {
    LocalCredentials local = 1;
    GoogleCredentials google = 2;
  }
}

message LocalCredentials {
  string username = 1;
  string password = 2;
}

message GoogleCredentials {
  string id = 1;
}

message LoginCreateOneInput {
  string platform = 4;
  string platformLoginId = 5;
  string platformLoginSecret = 6;
  string userId = 7;
  Credentials credentials = 9;
}

message LoginUpdateOneInput {
  string id = 1;
  string platform = 4;
  string platformLoginId = 5;
  string platformLoginSecret = 6;
  string userId = 7;
  Credentials credentials = 9;
}

message LoginFindOneInput {
  string id = 1;
}

message LoginFindWhereInput {
  string platform = 1;
  string platformLoginId = 2;
  string platformLoginSecret = 3;
}

message LoginFindByPlatformIdInput {
  string platform = 1;
  string platformLoginId = 2;
}

message LoginRemoveOneInput {
  string id = 1;
}

service LoginService {
  rpc CreateOne (LoginCreateOneInput) returns (Login) {}
  rpc FindOne (LoginFindOneInput) returns (Login) {}
  rpc FindWhere (LoginFindWhereInput) returns (Login) {}
  rpc FindByPlatformId (LoginFindByPlatformIdInput) returns (Login) {}
  rpc UpdateOne (LoginUpdateOneInput) returns (Login) {}
  rpc RemoveOne (LoginRemoveOneInput) returns (google.protobuf.Empty) {}
}